Fixed multiple issues such as webmap not loading some territories data on startup, performances issues on player movements